Fixed css issue in the angular app where in the products component the images weren't aligned to the top of their container element.

--- a/src/Web.Angular/ClientApp/src/app/products/products.component.css
+++ b/src/Web.Angular/ClientApp/src/app/products/products.component.css
@@ -5,7 +5,7 @@ ul {
 }
 
 li {
-    border-top: 1px solid grey;
+    border: 1px solid grey;
     margin: 0px;
     padding: 0px;
 }
@@ -14,6 +14,7 @@ li div {
     display: inline-block;
     border: 1px solid black;
     height: 100%;
+    vertical-align: top;
 }
 
 li div:first-child {
